# Coarse2FineRoofPlane

./: CMakeLists.txt  LICENSE  README.md
data/: 000022.txt  000206.txt  001588.txt  1977.txt  22523.txt  42902.txt
include/: NormalizedDatas.h  PlaneGridWithGridSize.h  PlaneSegMent.h
include/igl/: PI.h  boundary_facets.h  parallel_for.h  readOBJ.cpp  readOBJ.h  read_triangle_mesh.cpp  signed_angle.cpp  solid_angle.cpp  unique_edge_map.cpp  writeOBJ.cpp  writeOBJ.h
include/igl/copyleft/cgal/: outer_hull.cpp
src/: NormalizedDatas.cpp  PlaneGridWithGridSize.cpp  PlaneSegMent.cpp  main.cpp
